typos & adding easter egg to home page

--- a/ApprovalPoint1.html
+++ b/ApprovalPoint1.html
@@ -84,7 +84,7 @@
 		<img src = "images/riverside/riverside4.jpg">
 		<img src = "images/riverside/riverside5.jpg">
 		<section class="description not-pink fL cf">
-			<p>What is the magic of this building? It overpowers you with green trees, flowing water, a sense of calm, a feeling of home. More than that though, the building effuses history & authenticity: it is not what it's trying to be but what it already is that everyone falls in love with. The most authentic name we can give it is it's original name : The Riverside. Not only does it connect the building back to it roots, to it's place in the hearts of the people of Boulder, but it also connotes a visual of calmness, coolness, a sense of movement, and a sense of discovery. We did not come to this name immediately but only after days and days of playing with other ideas. In the end though, what calls all of us to this building is the soul of what is already there  - our job is not to force it into something new, but let it shine through with as little pomp & ego as possible. Thus we come to giving the building back to it's original name : The Riverside.</p>
+			<p>What is the magic of this building? It overpowers you with green trees, flowing water, a sense of calm, a feeling of home. More than that though, the building effuses history & authenticity: it is not what it's trying to be but what it already is that everyone falls in love with. The most authentic name we can give it is its original name : The Riverside. Not only does it connect the building back to its roots, to its place in the hearts of the people of Boulder, but it also connotes a visual of calmness, coolness, a sense of movement, and a sense of place. We did not come to this name immediately but only after days and days of playing with other ideas. In the end though, what calls all of us to this building is the soul of what is already there  - our job is not to force it into something new, but let it shine through with as little pomp & ego as possible. Thus we come to giving the building back to its original name : The Riverside.</p>
 		</section>
 
 		<div class="banner span-4 last" id="what">
@@ -94,7 +94,7 @@
 		</div>
 		<img src = "images/riverside/riverside3.jpg">
 		<section class="description not-pink fL cf">
-			<p>Moodboards convey a sense of tone through imagery, color & brand examples. Before creating visual branding we begin with moodboards to capture the essence of the brand and convert that into a visual language. This also helps define a sense which visual direction speaks most to the brand and the target audiences. <a href = "riverside/moodboards.pdf" target = "blank">okay give them to me</a></p>
+			<p>Moodboards convey a sense of tone through imagery, color & brand examples. Before creating visual branding we begin with moodboards to capture the essence of the brand and convert that into a visual language. This also helps give us a sense as to which visual direction speaks most to the brand and the target audiences. <a href = "riverside/moodboards.pdf" target = "blank">okay give them to me</a></p>
 		</section>
 		
 		<div class="banner span-4 last" id="how">
@@ -108,7 +108,7 @@
 		<div class="bullets span-4 fL cf">
 			<ul class="research">
 				<li>Please review & save the Brand Strategy document & send us feedback on anything that particularly speaks to you</li>
-				<li>Please look over the moodboards & choose 2 that you feel speak most to the brand & target audience & appeal to you personally. Please label with you #1 & #2 choice. Also please comment on anything (logos, fonts, imagery, concepts) that sticks out to you that you feel is particularly well suited to the branding of the building</li>
+				<li>Please look over the moodboards & choose 2 that you feel speak most to the brand & target audience & appeal to you personally. Please label with your #1 & #2 choice. Also please comment on anything (logos, fonts, imagery, concepts) that sticks out to you that you feel is particularly well suited to the branding of the building</li>
 			</ul>
 		</div>
 		<section class="description not-pink fL cf">
