--- a/index.html
+++ b/index.html
@@ -1240,7 +1240,7 @@ overflow:hidden;
                     <p><a href= "http://www.twitter.com/#!/jseav19" target = "blank">@jseav19</a></p>
                     <p><a href = "http://www.linkedin.com/in/jseav19" target = "blank">Linkedin</a></p>
                 </div>
-                <div class="other-interests span-1 cf last">
+                <div class="other-interests span-1 cf">
                     <div class="sample melanie">
                     </div>
                     <p><span class="emphasis">Melanie Gower</span></p>
@@ -1252,7 +1252,9 @@ overflow:hidden;
                     <div class="sample creature">
                     </div>
                     <p><span class="emphasis">Jelly Walrus</span></p>
-                    <p>Resident Creature of the Month</p>
+                    <p>Resident .COM</p>
+                    <p>(Creature Of the Month)</p>
+                    <p>by GIRLvsCODE</p>
                 </div>
             </div>
             <div class="banner span-4 last">
@@ -1299,5 +1301,6 @@ overflow:hidden;
         </section>
     </div>
     </div>
+    <a href = "http://fleetcreature.com/fCManifesto.html"><div class = "manifesto"></div></a>
 </body>
 </html>
