added html deepdive doc

--- a/ApprovalPoint1.html
+++ b/ApprovalPoint1.html
@@ -72,7 +72,7 @@
 			</ul>
 		</div>
 		<section class="description not-pink fL cf">
-			<p>We have used all of this work to create a <a href = "RiversideResearch.html" target = "blank">Market Research Document</a> and a <a href = "riverside/brandstrategy.pdf" target = "blank">Brand Strategy Document</a> for the building to unify & direct the energies & intentions of all the involved parties. The copy in the Brand Strategy document should be used to create talking points, marketing materials, etc.</p>
+			<p>We have used all of this work to create a <a href = "www.fleetcreature.com/RiversideResearch.html" target = "blank">Market Research Document</a> and a <a href = "www.fleetcreature.com/riverside/brandstrategy.pdf" target = "blank">Brand Strategy Document</a> for the building to unify & direct the energies & intentions of all the involved parties. The copy in the Brand Strategy document should be used to create talking points, marketing materials, etc.</p>
 		</section>
 
 
