fixed a broken image pathway

--- a/deepDiveDay2-tresPlace.html
+++ b/deepDiveDay2-tresPlace.html
@@ -55,7 +55,7 @@
 				<h1>Market Research & Brand Strategy</h1>
 			</div>
 		</div>
-			<div><img width='450' src = "../tresPlace/TresPlaceDD2/Tres_Place_DD2_01.jpg"></div>
+			<div><img width='450' src = "tresPlace/TresPlaceDD2/Tres_Place_DD2_01.jpg"></div>
 		<div class="banner span-4 last" id="who">
 			<div class="fL">
 				<h1>User-Stories</h1>
