updated tresplace deepdive day2 doc

--- a/deepDiveDay2-tresPlace.html
+++ b/deepDiveDay2-tresPlace.html
@@ -45,17 +45,108 @@
 <body class="proposal" id ="top">
     <a href="http://www.fleetcreature.com" class="home-link" target="blank"><img src="images/beetle_illustration2.png" width="250px"></a>
 	<div class="container cf">
-		<div class="banner span-4 last">
-			<div class="fL">
-				<h2>TresPlace Deep Dive Day 2</h2>
+		<div class="banner span-4">
+			<div class="ytb">
+				<h2 class = "ytb fL">TresPlace Deep Dive Day 2</h2>
+				<img class = "fR last" id = "thumb" src = "images/tresplace/tresplacelogosm.png">
 			</div>
 		</div>
+		<section class="description not-pink fL cf">
+			<p>On the TresPlace Deep Dive Day 2 the TresPlace team heard an update from Ryan on his reflections, insights and discoveries over his past month of travel and relaxation in Costa Rica. Ryan told the team about his affinity for the new name, 'TRESPLACE.' He then laid out his best understanding of the tresplace app development business overview according to the Business Model Canvas Model. From there, Alyssa led the team through the generation of user-stories, and then a mock-up wireframing exercise. Enjoy the notes and media features below, which are the result of our 2nd Deep Dive.</p>
+			<p>The seed has been planted, rich soil added, now for watering and tending to it please review below...</p>
+		</section>
 		<div class="banner span-4 last" id="who">
 			<div class="fL">
-				<h1>Market Research & Brand Strategy</h1>
+				<h1>The Business Model Canvas Presented by 'king.Ryan'</h1>
 			</div>
 		</div>
-			<div><img width='450' src = "tresPlace/TresPlaceDD2/Tres_Place_DD2_01.jpg"></div>
+			<div><img width='450' class = "radius" src = "tresPlace/TresPlaceDD2/Tres_Place_DD2_01.jpg"></div>
+			<div class="bullets span-2 fR last cf">
+			<p>VALUE PROPOSITION</p>
+				<ul class="deliverables">
+					<li>Feeling special & recognized</li>
+					<li>Make technology human</li>
+					<li>Free matching users' preferences to shops</li>
+					<li>Targeted Ads</li>
+					<li>Short videos</li>
+					<li>Database for specialty coffee</li>
+				</ul>
+			</div>
+			<div class="bullets span-2 fR last cf">
+			<p>CUSTOMER RELATIONSHIPS</p>
+				<ul class="deliverables">
+					<li>Intimate Personal Relationships</li>
+					<li>Customized</li>
+					<li>An additional trade secret that only Ryan knows...</li>
+				</ul>
+			</div>
+			<div class="bullets span-2 fL cf">
+			<p>KEY PARTNERS</p>
+				<ul class="deliverables">
+					<li>Beta Testers</li>
+					<li>fleetCreatures</li>
+					<li>Lyon Film</li>
+					<li>E-Commerce Platform</li>
+					<li>Development Team</li>
+				</ul>
+			</div>
+			<div class="bullets span-2 fR last cf">
+			<p>KEY ACTIVITIES</p>
+				<ul class="deliverables">
+					<li>Platform Design</li>
+					<li>Platform Development</li>
+					<li>Platform Management</li>
+					<li>Create Stories</li>
+					<li>Branding</li>
+					<li>Sales/Marketing</li>
+					<li>Team Training(...Ryan, ?... Is this right?)</li>
+				</ul>
+			</div>
+			<div class="bullets span-2 fL cf">
+			<p>KEY RESOURCES</p>
+				<ul class="deliverables">
+					<li>Platform</li>
+					<li>Capital</li>
+					<li>Brand</li>
+				</ul>
+			</div>
+			<div class="bullets span-2 fR last cf">
+			<p>COST STRUCTURE</p>
+				<ul class="deliverables">
+					<li>Platform cost</li>
+					<li>Team Salaries</li>
+					<li>Travel</li>
+					<li>Equipment</li>
+				</ul>
+			</div>
+			<div class="bullets span-2 fL cf">
+			<p>REVENUE STREAMS</p>
+				<ul class="deliverables">
+					<li>Free and E-Commerce</li>
+					<li>Free</li>
+					<li>Google AdSense</li>
+					<li>TBD...more ideas?</li>
+				</ul>
+			</div>
+			<div class="bullets span-2 fL cf">
+				<p>CHANNELS</p>
+				<ul class="deliverables">
+					<li>Mobile App (mobile web)</li>
+					<li>Web: TresPlace.com</li>
+					<li>Word of Mouth</li>
+					<li>Ads</li>
+					<li>FaceBook & Twitter</li>
+				</ul>
+			</div>
+			<div class="bullets span-2 fR last cf">
+				<p>CUSTOMER SEGMENTS</p>
+				<ul class="deliverables">
+					<li>Cliets (Coffee Creators)</li>
+					<li>Webserfers/users (Coffee Lovers)</li>
+					<li>Advertisers</li>
+					<li>Hollywood</li>
+				</ul>
+			</div>
 		<div class="banner span-4 last" id="who">
 			<div class="fL">
 				<h1>User-Stories</h1>
@@ -80,7 +171,7 @@
 				<li>post promotional pricing</li>
 			</ul>
 		</div>
-		<div class="bullets span-2 fR cf">
+		<div class="bullets span-2 fR cf last">
 			<p>As Coffee Lovers we can ...</p>
 			<ul class="deliverables">
 				<li>request that a coffee creator builds an Investigation</li>
