updating the tresplace deep dive day 2 html file

--- a/deepDiveDay2-tresPlace.html
+++ b/deepDiveDay2-tresPlace.html
@@ -52,7 +52,7 @@
 			</div>
 		</div>
 		<section class="description not-pink fL cf">
-			<p>On the TresPlace Deep Dive Day 2 the TresPlace team heard an update from Ryan on his reflections, insights and discoveries over his past month of travel and relaxation in Costa Rica. Ryan told the team about his affinity for the new name, 'TRESPLACE.' He then laid out his best understanding of the tresplace app development business overview according to the Business Model Canvas Model. From there, Alyssa led the team through the generation of user-stories, and then a mock-up wireframing exercise. Enjoy the notes and media features below, which are the result of our 2nd Deep Dive.</p>
+			<p>On the TresPlace Deep Dive Day 2 the TresPlace team heard an update from Ryan on his reflections, insights and discoveries over his past month of travel and relaxation in Costa Rica. Ryan told the team about his affinity for the new name, 'TRESPLACE.' TresPlace combines the latin flair with the concept of the 'third place,' which has been used to describe coffeeshop culture. He then laid out his best understanding of the tresplace app development business overview according to the Business Model Canvas Model. From there, Alyssa led the team through the generation of user-stories, and then a mock-up wireframing exercise. Enjoy the notes and media features below, which are the result of our 2nd Deep Dive.</p>
 			<p>The seed has been planted, rich soil added, now for watering and tending to it please review below...</p>
 		</section>
 		<div class="banner span-4 last" id="who">
@@ -60,7 +60,10 @@
 				<h1>The Business Model Canvas Presented by 'king.Ryan'</h1>
 			</div>
 		</div>
-			<div><img width='450' class = "radius" src = "tresPlace/TresPlaceDD2/Tres_Place_DD2_01.jpg"></div>
+		<section class="description not-pink fL cf">
+			<p>After the Day 1 Deep Dive, Ryan did some traveling, reflecting, reading. He a helpful tool for launching a startup tech company, the Business Model Canvas. Here are the elements of the TresPlace business overview and opportunity as they fit into the canvas.</p>
+		</section>
+			<div><img width='450' class = "radius" src = "images/tresplace/Tres_Place_DD2_01.jpg"></div>
 			<div class="bullets span-2 fR last cf">
 			<p>VALUE PROPOSITION</p>
 				<ul class="deliverables">
@@ -154,6 +157,7 @@
 		</div>
 		<section class="description not-pink fL cf">
 			<p>User-stories provide a simple, easy to read, articulation of what users of the tresplace app can do. They are the reference document for what needs to be included in the MVP (mininum viable product).</p>
+			<p>Note that there was extensive discussion around the revenue model for tresplace. Some advocated for facilitating the purchase of coffee drinks through app or a monthly plan or tab service to users' 'loved' coffee shop. There is a counter point that this is too much to accomplish for the MVP. More discussion to be had on this topic moving forward...</p>
 		</section>
 		<div class="bullets span-2 fL cf">
 			<p>AS a Coffee Creator, I can ...</p>
@@ -161,7 +165,7 @@
 				<li>make a 'Pourtrait' of my coffee shop</li>
 				<li>upload high quality images to my shop pourtrait</li>
 				<li>upload high quality video to my shop pourtrait</li>
-				<li>uplaod an investigation* to my shop pourtrait</li>
+				<li>create an investigation* for my shop pourtrait</li>
 				<li>show investigation results infographically and textually</li>
 				<li>customize my investigation or choose a pre-packaged one</li>
 				<li>include questions and/or modules in my investigation</li>
@@ -169,6 +173,7 @@
 				<li>post my active menu of coffee drinks</li>
 				<li>post events</li>
 				<li>post promotional pricing</li>
+				<li>monitor and remove user-generated content</li>
 			</ul>
 		</div>
 		<div class="bullets span-2 fR cf last">
@@ -176,27 +181,63 @@
 			<ul class="deliverables">
 				<li>request that a coffee creator builds an Investigation</li>
 				<li>create my own investigation</li>
-				<li>'like' many coffee shops</li>
-				<li>'love' only one coffee shop</li>
-				<li>'like' many coffee drinks</li>
-				<li>'love' only one coffee drink</li>
+				<li>'like' many coffee shops and drinks</li>
+				<li>'love' only one coffee shop and one drink</li>
 				<li>enable our own lover-pourtrait</li>
 				<li>show our relationship status to coffee drinks and shops</li>
 				<li>display the investigations we've filled out</li>
 				<li>share our investigation results through social media</li>
+				<li>create our own investigations for the shops we 'love'</li>
 				<li>read a lovers & creators - feed</li>
-				<li>see our relationship status and that of others</li>
+				<li>see our shop relationship status and that of others</li>
 				<li>see our social media frends pourtraits</li>
 				<li>can write love letters to our fave coffee shops</li>
 			</ul>
 		</div>
+		<div class="banner span-4 last" id="who">
+			<div class="fL">
+				<h1>Wireframe Mocks</h1>
+			</div>
+		</div>
+		<section class="description not-pink fL cf">
+			<p>Wireframes are used to show the basic layout and flow of an apps user-experience and user-interface. The user-interface and user-experience are crucial to the success of an app and should be easy-to-use, fun, intuitive, engaging, encourage the user to use it over and over again.</p>
+			<p>This was a creativity exercise to get the tresplace team thinking along these lines.</p>
+		</section>
 		<div class='cf span-4'>
 			<iframe class='ytb' width="300" height="168" src="http://www.youtube.com/embed/QIZeO5mqEM8" frameborder="1" allowfullscreen></iframe>
 			<iframe class='ytb' width="300" height="168" src="http://www.youtube.com/embed/bfrmHBp0jGY" frameborder="1" allowfullscreen></iframe>
 			<iframe class='ytb' width="300" height="168" src="http://www.youtube.com/embed/4-29nb2D2Zk" frameborder="1" allowfullscreen></iframe>
 		</div>
-		<section class="description fL cf">
-			<p>We've mocked up some wireframes and presented them before a live audience.</p>
+		<div class="lets-be-friends span-4 last">
+	        <div class="other-interests span-1 cf upPadding">
+	            <div class="sample wireframes"></div>
+	            <p><span class="emphasis">Team Broken Heart</span></p>
+	        </div>
+	        <div class="other-interests span-1 cf upPadding">
+	            <div class="sample wireframes2">
+	            </div>
+	            <p><span class="emphasis">Team Factoid</span></p>
+	        </div>
+	        <div class="other-interests span-1 cf upPadding">
+	            <div class="sample wireframes3">
+	            </div>
+	            <p><span class="emphasis">Team InfoGraphic</span></p>
+	        </div>
+	        <div class="other-interests span-1 cf last upPadding">
+	            <div class="sample wireframes4">
+	            </div>
+	            <p><span class="emphasis">Team Jelly Walrus</span></p>
+	        </div>
+	    </div>
+		<div class="banner span-4 last" id="who">
+			<div class="fL">
+				<h1>Next Steps...</h1>
+			</div>
+		</div>
+		<section class="description not-pink fL cf">
+			<p>At this time, we have: a strong concept of the product, the market opportunity is laid out, and the product's basic functionality is sketched. It's time to move onto the next steps.</p>
+			<p>The beginnings of the product band are emerging, and an identity which will unite the tresplace team and attract financial and creative resources in the startup market is called for. A solid brand can inspire the creative process, provide a sense of purpose and unity within the team, and create a sexy face for the project.</p>
+			<p>Branding is a suggested next step in the tresplace development journey.</p>
 		</section>
 	</div>
 </body>
