--- a/internal.html
+++ b/internal.html
@@ -101,7 +101,7 @@
 				<h1>sales commisions</h1>
 			</div>
 			<div class="fR">
-				<h3>current commision: 3%</h3>
+				<h3>current commision: 5%</h3>
 			</div>
 		</div>
 		<div class="bullets span-2 fL cf">
@@ -346,7 +346,7 @@
 				<h1>UI/UX Designer</h1>
 			</div>
 			<div class="fR">
-				<h3>Melanie Gower + fleetLeague Contractors</h3>
+				<h3>Melanie Gower + fleetCreative League Contractors</h3>
 			</div>
 		</div>
 		<div class = "right-column-proposals">
@@ -394,7 +394,7 @@
 				<li>Collaborate with client, creative director & project manager</li>
 				<li>Produce necessary deliverables & revisions</li>
 				<li>Keep project manager updated on progress</li>
-				<li>Check in with Creative director at beginning of project, midway & near end</li>
+				<li>Check in with Creative director at necessary points</li>
 				<li>Ask questions and bring in help as needed</li>
 			</ul>
 		</div>
@@ -403,13 +403,13 @@
 			<ul>		
 				<li>Designers are compensated on a fixed, project basis</li>
 				<li>Designer compensation is 25% of project bid. Project bids are created based on the <a href = "pricing.html">fleetCreature pricing menu</a>.</li>
-				<li>Payment is made 40% up front & 60% upon completion of project to fleetCreature standards</li>
+				<li>Payment is made 40% up front & 40% midway & 20% upon completion of project to fleetCreature standards</li>
 			</ul>
 		</div>
 		<div class="bullets span-2 fL cf">
 			<p>CONTRACT</p>
 			<ul>		
-				<li>Designers are required to sign a <a href="">work contract</a>.</li>
+				<li>Designers are required to sign a <a href="https://docs.google.com/document/d/1VqvD36WAQET29WkS3v4M9d8mCjXBilDeovWIkEUUzWk/edit" target = "blank">work contract</a>.</li>
 			</ul>
 		</div>
 		<div class="banner span-4 last" id="brand-strategist">
