--- a/pricing.html
+++ b/pricing.html
@@ -73,7 +73,7 @@
 			</div>
 		</div>
 		<section class="description fL cf">
-			<p><span class = "darkText">$150</span> Our hourly rate.</p>
+			<p><span class = "darkText">$120</span> Our hourly rate.</p>
 			
 			<p><span class = "darkText">Give it to you straight</span> What we like to do.</p>
 			<p>Many design & dev companies do not publicize their rates. We believe in transparency and feel that our clients are cool enough to handle knowing some of the industry secrets.</p>
@@ -379,7 +379,7 @@
 		</div>
 		<section class="description fL cf">
 			<p>You will find cheaper rates & more expensive rates out there for design. Things can be scattered across the board. We research constantly & base our pricing on a fair market evaluation of the service & quality we provide. We are confident in our skills & ability to create excellence for your product.</p>
-			<p><span class = "darkText">40%</span>downpayment to get started.</p>
+			<p><span class = "darkText">40%</span>downpayment to get started. Payment up front for orders under $5k.</p>
 			<p>A legal contract stipulating our business relationship is signed at the beginning of each new project.</p>
 			<p>Buy one or more design element and get a <span class = "darkText">25% discount</span> on the lowest priced element.</p>
 			<p>Each projects activates the talented fC team. Please 	email our <a href="mailto:sales@fleetcreature.com">Lead Coversions Department</a> for a bid on your project. Thank you for your interest in fleetCreature!</p>
