Deep Dive Day 2 final

--- a/deepDiveDay2-tresPlace.html
+++ b/deepDiveDay2-tresPlace.html
@@ -21,8 +21,6 @@
 <script type="text/javascript" src="js/script.js"></script>
 <script type="text/javascript" src="js/prefixfree.js"></script>
 <script type="text/javascript" src="js/modernizr-2.0.6.js"></script>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
-<script type="text/javascript" src="js/scroll.js"></script>
 
 <script type="text/javascript">
 
@@ -208,25 +206,47 @@
 			<iframe class='ytb' width="300" height="168" src="http://www.youtube.com/embed/bfrmHBp0jGY" frameborder="1" allowfullscreen></iframe>
 			<iframe class='ytb' width="300" height="168" src="http://www.youtube.com/embed/4-29nb2D2Zk" frameborder="1" allowfullscreen></iframe>
 		</div>
+        <div style="display: none;">
+            <div id="wire1" class="popupbox wires">
+                <img src="images/tresplace/wireframeMock.JPG">
+            </div>
+            <div id="wire2" class="popupbox wires">
+                <img src="images/tresplace/wireframeMock1.JPG">
+            </div>
+            <div id="wire3" class="popupbox wires">
+                <img src="images/tresplace/wireframeMock2.JPG">
+            </div>
+            <div id="wire4" class="popupbox wires">
+                <img src="images/tresplace/wireframeMock3.JPG">
+            </div>
+        </div>
 		<div class="lets-be-friends span-4 last">
 	        <div class="other-interests span-1 cf upPadding">
-	            <div class="sample wireframes"></div>
-	            <p><span class="emphasis">Team Broken Heart</span></p>
+	        	<a id="inline" href="#wire1" rel="wireframe">
+		            <div class="sample wireframes wire-hover"></div>
+	            </a>
+	            <p><span class="emphasis">Team King</span></p>
 	        </div>
 	        <div class="other-interests span-1 cf upPadding">
-	            <div class="sample wireframes2">
-	            </div>
-	            <p><span class="emphasis">Team Factoid</span></p>
-	        </div>
-	        <div class="other-interests span-1 cf upPadding">
-	            <div class="sample wireframes3">
-	            </div>
+	        	<a id="inline" href="#wire2" rel="wireframe">
+		            <div class="sample wireframes2 wire-hover">
+		            </div>
+	            </a>
 	            <p><span class="emphasis">Team InfoGraphic</span></p>
 	        </div>
+	        <div class="other-interests span-1 cf upPadding">
+	        	<a id="inline" href="#wire3" rel="wireframe">
+		            <div class="sample wireframes3 wire-hover">
+		            </div>
+		        </a>
+	            <p><span class="emphasis">Team Grid</span></p>
+	        </div>
 	        <div class="other-interests span-1 cf last upPadding">
-	            <div class="sample wireframes4">
-	            </div>
-	            <p><span class="emphasis">Team Jelly Walrus</span></p>
+	        	<a id="inline" href="#wire4" rel="wireframe">
+		            <div class="sample wireframes4 wire-hover">
+		            </div>
+	            </a>
+	            <p><span class="emphasis">Team Factoid</span></p>
 	        </div>
 	    </div>
 		<div class="banner span-4 last" id="who">
