--- a/deepDiveDay2-tresPlace.html
+++ b/deepDiveDay2-tresPlace.html
@@ -67,10 +67,15 @@
 			<div class="bullets span-2 fR last cf">
 			<p>VALUE PROPOSITION</p>
 				<ul class="deliverables">
+					<li>Specialty Coffee's : database, social network, web store</li>
 					<li>Feeling special & recognized</li>
 					<li>Make technology human</li>
 					<li>Free matching users' preferences to shops</li>
 					<li>Targeted Ads</li>
+					<li>Richer emotional connection to coffee creators</li>
+					<li>Community around shared interests</li>
+					<li>Personally meaningful handcrafted stories instead of search</li>
+					<li>Coffee Movement : Be a part</li>
 					<li>Short videos</li>
 					<li>Database for specialty coffee</li>
 				</ul>
@@ -80,10 +85,10 @@
 				<ul class="deliverables">
 					<li>Intimate Personal Relationships</li>
 					<li>Customized</li>
-					<li>An additional trade secret that only Ryan knows...</li>
+					<li>Crowd sourced : Whoever takes the best photo get free coffee</li>
 				</ul>
 			</div>
-			<div class="bullets span-2 fL cf">
+			<div class="bullets span-2 fR last cf">
 			<p>KEY PARTNERS</p>
 				<ul class="deliverables">
 					<li>Beta Testers</li>
@@ -93,7 +98,7 @@
 					<li>Development Team</li>
 				</ul>
 			</div>
-			<div class="bullets span-2 fR last cf">
+			<div class="bullets span-2 fL cf">
 			<p>KEY ACTIVITIES</p>
 				<ul class="deliverables">
 					<li>Platform Design</li>
