tresplace deep dive tweaks

--- a/deepDiveDay2-tresPlace.html
+++ b/deepDiveDay2-tresPlace.html
@@ -78,7 +78,7 @@
 					<li>Database for specialty coffee</li>
 				</ul>
 			</div>
-			<div class="bullets span-2 fR last cf">
+			<div class="bullets span-2 fL last cf">
 			<p>CUSTOMER RELATIONSHIPS</p>
 				<ul class="deliverables">
 					<li>Intimate Personal Relationships</li>
@@ -96,24 +96,14 @@
 					<li>Development Team</li>
 				</ul>
 			</div>
-			<div class="bullets span-2 fL cf">
-			<p>KEY ACTIVITIES</p>
+			<div class="bullets span-2 fL last bizCanvas cf">
+				<p>CHANNELS</p>
 				<ul class="deliverables">
-					<li>Platform Design</li>
-					<li>Platform Development</li>
-					<li>Platform Management</li>
-					<li>Create Stories</li>
-					<li>Branding</li>
-					<li>Sales/Marketing</li>
-					<li>Team Training(...Ryan, ?... Is this right?)</li>
-				</ul>
-			</div>
-			<div class="bullets span-2 fL cf">
-			<p>KEY RESOURCES</p>
-				<ul class="deliverables">
-					<li>Platform</li>
-					<li>Capital</li>
-					<li>Brand</li>
+					<li>Mobile App (mobile web)</li>
+					<li>Web: TresPlace.com</li>
+					<li>Word of Mouth</li>
+					<li>Ads</li>
+					<li>FaceBook & Twitter</li>
 				</ul>
 			</div>
 			<div class="bullets span-2 fR last cf">
@@ -126,6 +116,26 @@
 				</ul>
 			</div>
 			<div class="bullets span-2 fL cf">
+			<p>KEY ACTIVITIES</p>
+				<ul class="deliverables">
+					<li>Platform Design</li>
+					<li>Platform Development</li>
+					<li>Platform Management</li>
+					<li>Create Stories</li>
+					<li>Branding</li>
+					<li>Sales/Marketing</li>
+					<li>Team Training(...Ryan, ?... Is this right?)</li>
+				</ul>
+			</div>
+			<div class="bullets span-2 fR last cf">
+			<p>KEY RESOURCES</p>
+				<ul class="deliverables">
+					<li>Platform</li>
+					<li>Capital</li>
+					<li>Brand</li>
+				</ul>
+			</div>
+			<div class="bullets span-4 fL cf">
 			<p>REVENUE STREAMS</p>
 				<ul class="deliverables">
 					<li>Free and E-Commerce</li>
@@ -133,25 +143,7 @@
 					<li>Google AdSense</li>
 					<li>TBD...more ideas?</li>
 				</ul>
-			</div>
-			<div class="bullets span-2 fL cf">
-				<p>CHANNELS</p>
-				<ul class="deliverables">
-					<li>Mobile App (mobile web)</li>
-					<li>Web: TresPlace.com</li>
-					<li>Word of Mouth</li>
-					<li>Ads</li>
-					<li>FaceBook & Twitter</li>
-				</ul>
-			</div>
-			<div class="bullets span-2 fR last cf">
-				<p>CUSTOMER SEGMENTS</p>
-				<ul class="deliverables">
-					<li>Cliets (Coffee Creators)</li>
-					<li>Webserfers/users (Coffee Lovers)</li>
-					<li>Advertisers</li>
-					<li>Hollywood</li>
-				</ul>
+				<img src="images/beetle_smallFlipped.png" id="rhino">
 			</div>
 		<div class="banner span-4 last" id="who">
 			<div class="fL">
@@ -244,7 +236,7 @@
 		            <div class="sample wireframes3 wire-hover">
 		            </div>
 		        </a>
-	            <p><span class="emphasis">Team Grid</span></p>
+	            <p><span class="emphasis">Team BrokenHeart</span></p>
 	        </div>
 	        <div class="other-interests span-1 cf last upPadding">
 	        	<a id="inline" href="#wire4" rel="wireframe">
