Print style sheet for DeepDiveDay2

--- a/deepDiveDay2-tresPlace.html
+++ b/deepDiveDay2-tresPlace.html
@@ -10,6 +10,7 @@
 <title>fleetCreature | app design and UI / UX in Boulder, Colorado</title>
 	
 <link rel="stylesheet" href="css/screen.css" type="text/css" media="screen, projection">
+<link rel="stylesheet" href="css/print.css" type="text/css" media="print">
 <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400' rel='stylesheet' type='text/css'>
 <link rel="stylesheet" href="css/fancybox/jquery.fancybox-1.3.4.css" type="text/css" media="screen" />
 <link rel="shortcut icon" href="http://www.fleetcreature.com/favicon.ico" type="image/ico" />
@@ -61,7 +62,7 @@
 		<section class="description not-pink fL cf">
 			<p>After the Day 1 Deep Dive, Ryan did some traveling, reflecting, reading. He a helpful tool for launching a startup tech company, the Business Model Canvas. Here are the elements of the TresPlace business overview and opportunity as they fit into the canvas.</p>
 		</section>
-			<div><img width='450' class = "radius" src = "images/tresplace/Tres_Place_DD2_01.jpg"></div>
+			<div><img width='450' class = "radius image1" src = "images/tresplace/Tres_Place_DD2_01.jpg"></div>
 			<div class="bullets span-2 fR last cf">
 			<p>VALUE PROPOSITION</p>
 				<ul class="deliverables">
@@ -198,12 +199,12 @@
 			<p>Wireframes are used to show the basic layout and flow of an apps user-experience and user-interface. The user-interface and user-experience are crucial to the success of an app and should be easy-to-use, fun, intuitive, engaging, encourage the user to use it over and over again.</p>
 			<p>This was a creativity exercise to get the tresplace team thinking along these lines.</p>
 		</section>
-		<div class='cf span-4'>
+		<div class='cf span-4 videos'>
 			<iframe class='ytb' width="300" height="168" src="http://www.youtube.com/embed/QIZeO5mqEM8" frameborder="1" allowfullscreen></iframe>
 			<iframe class='ytb' width="300" height="168" src="http://www.youtube.com/embed/bfrmHBp0jGY" frameborder="1" allowfullscreen></iframe>
 			<iframe class='ytb' width="300" height="168" src="http://www.youtube.com/embed/4-29nb2D2Zk" frameborder="1" allowfullscreen></iframe>
 		</div>
-        <div style="display: none;">
+        <div class="pop-box">
             <div id="wire1" class="popupbox wires">
                 <img src="images/tresplace/wireframeMock.JPG">
             </div>
